# backend_on_cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
handlers/: cat_handler.cpp  cow_handler.cpp  delete_all_animals_handler.cpp  dog_handler.cpp  fish_handler.cpp  get_all_animals_handler.cpp  handlers.h
lib/: animals_lib.cpp  libs.h
mappers/: animalRequestMapper.cpp  catalogMapper.cpp  mappers.h
services/: Animal.h  Cat.cpp  Cow.cpp  DeleteAllAnimals.cpp  Dog.cpp  Fish.cpp  GetAllAnimals.cpp
sql/migrations/: animals_migration.h
sql/other_sql/: animal_sqls.h
sql/repo/: DatabaseRepoException.cpp  animalsRepo.h  animals_repo.cpp
